--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     #circle_bar .frame .case{width: 50%; height: 200px;}
     main .about.active .wrap .profile .contents .cont1 .identification_photo .img{height: 300px;}
     main .about.active .wrap .profile .contents .cont2{font-size: 16px; padding-top: 70px; z-index: 6;}
-    main .about .wrap .profile .cont3{width: 500px; padding-top: 20px;}
+    main .about .wrap .profile .cont3{width: 500px; width: auto; padding-top: 20px;}
     main .about .wrap .profile .cont3 .language_stat h3{font-size: 16px;}
     main .about .wrap .profile .contents .cont2 .myinfo h3{font-size: 16px; padding-bottom: 0; margin-bottom: 0;}
     main .about .wrap .profile .contents .cont2 .myinfo2 h3{font-size: 16px; padding-bottom: 0; margin-bottom: 0;}
@@ -262,23 +262,34 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     /* main .portfolio .slider ol{bottom: 20px;} */
 }
 @media (max-width:800px){
+    main .about.active .wrap .profile .contents{width: auto;}
     main .about.active .wrap .profile .contents .cont1{width: 200px; padding-left: 0; height: 200px;}
     main .about.active .wrap .profile .contents .cont1 .identification_photo{height: 200px;}
     main .about.active .wrap .profile .contents .cont1 .identification_photo .img{width: 200px; height: 200px;}
     main .about.active .wrap .profile .contents .cont2{width: 200px; padding-left: 0; padding-right: 0;}
-    main .about .wrap .profile .cont3{width: 300px;}
+    main .about .wrap .profile .cont3{width: 300px; width: auto;}
     #circle_bar .frame .case:nth-child(2) .cont{left: 90px;}
     #circle_bar .frame .case:nth-child(4) .cont{left: 95px;}
     main .about .wrap .profile .contents .cont2 .myinfo h3{font-size: 16px; width: 120px;}
     main .about .wrap .profile .contents .cont2 .myinfo2 h3{font-size: 16px; width: 120px;}
     main .about .wrap .profile .cont3 .language_stat h3{font-size: 16px;}
     main section.about{height: 100%;}
+    .contact .wrap{width: 600px;}
 }
 @media (max-width:600px){
-    main .about.active .wrap .profile .contents{width: 400px;}
+    main .about.active .wrap .profile .contents{width: 400px; width: auto;}
+    main .about.active .wrap .profile .contents cont3{width: auto;}
     main .about.active .wrap .profile .contents .cont1{width: 150px;}
     main .about.active .wrap .profile .contents .cont1 .identification_photo{width: 150px;}
     main .about.active .wrap .profile .contents .cont1 .identification_photo .img{width: 150px;}
     main .about .wrap .profile .cont3{margin-left: 44px;}
     main .about.active .wrap .profile .contents .cont2{word-break: keep-all;}
+    .contact .wrap{width: 400px;}
+    
+    header{position: fixed; top: 0; left: 0; width: 100%; height: 80px; background: rgba(0,0,0,0.7); z-index: 8;}
+    header nav{width: 100%; height: 100%;}
+    header nav ul{width: 100%; height: 100%; display: flex; flex-wrap: wrap; justify-content: center; align-items: center; font-weight: 700; text-transform: uppercase;}
+    header nav ul li{margin: 0 20px;}
+    header nav ul li a{display: block; color: #fff;}
+    header nav ul li.active a{color:#ffcc00;}    
 } 
