--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,9 @@ main .about .wrap{width: 100%; height: 100%; display: flex; flex-wrap: wrap; jus
     background-repeat: no-repeat;
     background-size: cover;
     background-position:100% 100%;
-    background-attachment: fixed;}
+    background-attachment: fixed;
+}
+main .about .wrap .profile .guide{display: none;}
 main .about .wrap .profile{width: 0; height: 80%;   
      background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;background: rgba(207, 196, 163, 0.603); position: relative; transition: width 1s; transition-delay: 1s; box-shadow: 4px 4px 36px rgba(138, 104, 41, 0.904);}
 main .about.active .wrap .profile{width: 85%; /*height: 100%;*/ background: rgb(230, 221, 198);}    
@@ -297,6 +299,7 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     header nav ul li{margin: 0 20px;}
     header nav ul li a{display: block; color: #fff;}
     header nav ul li.active a{color:#ffcc00;}     
+    .thankyou_message article{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 300px; min-width: 320px; background-color: #fff; border-radius: 4px; text-align: center;}
 }
 @media (max-width:500px){
     main .about.active .wrap .profile .cont3{display: none;}
@@ -304,4 +307,9 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     .popup, .popup_second{width: 300px; height: 400px;}
     .popup .dif_popup p, .popup_second .dif_popup p{display: none;}
     .popup .dif_popup p.res_p, .popup_second .dif_popup p.res_p{display: block;}
+    main .about .wrap .profile .guide{z-index: 20; font-size: 16px; position: absolute; left: 50%; transform: translate(-50%,-50%); top: 50%; display: block; animation: guide_color 2.2s infinite;}
+    @keyframes guide_color{
+        50%{color: #aaaaff;}
+    }
+    main .about.active .wrap .profile .guide{display: none;}
 }
