--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ main .about.active .wrap .profile .contents .cont1 .identification_photo{width: 
 main .about.active .wrap .profile .contents .cont1 .identification_photo .img{width: 357px; height: 500px; background-image: url(../img/profile.png); background-size: contain; background-position: 50% 50%; background-repeat: no-repeat;}
 
 
-main .about .wrap .profile .contents .cont2{width: 80%; height: 520px; background: rgb(230, 221, 198); padding: 10px 42px 10px 10px; opacity: 0;}
+main .about .wrap .profile .contents .cont2{width: 80%; height: 520px; height: auto; background: rgb(230, 221, 198); padding: 10px 42px 10px 10px; opacity: 0;}
 main .about.active .wrap .profile .contents .cont2{opacity: 1; transition: 1s; transition-delay: 2s; padding-top: 125px;}
 main .about .wrap .profile .contents .cont2 .myinfo{width: 100%; height: auto;}
 main .about .wrap .profile .contents .cont2 .myinfo h3{width: 200px; font-size: 35px; border-bottom: 3px solid #000; padding-bottom: 10px; margin-bottom: 10px;}
@@ -244,9 +244,7 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     main .about .wrap .profile .contents{width: 800px;width: auto;}
     main .about .wrap .profile .contents .cont1{padding-right: 100px;}
     main .about .wrap .profile .cont3{width: 800px;width: auto;}
-    .portfolio .slider ol{bottom: 20%;}
-    
-    
+    .portfolio .slider ol{bottom: 20%;}    
 }
 @media (max-width:1030px){
     main .portfolio .slider ul li.slide > div.port_img{height: 300px;} 
@@ -263,6 +261,7 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     main .about.active .wrap .profile .cont3 .language_stat h3{font-size: 16px;}    
     main .about.active .wrap .profile{height: 100%;}
     /* main .portfolio .slider ol{bottom: 20px;} */
+
 }
 @media (max-width:800px){
     main .about.active .wrap .profile .contents{width: auto;}
@@ -302,6 +301,7 @@ main .portfolio .slider .ca .fas:hover{color: #000;}
     .thankyou_message article{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 300px; min-width: 320px; background-color: #fff; border-radius: 4px; text-align: center;}
 }
 @media (max-width:500px){
+    header nav ul li a{font-size: 13px;}
     main .about.active .wrap .profile .cont3{display: none;}
     main .about .wrap .profile:after{display: none;}
     .popup, .popup_second{width: 300px; height: 400px;}
